fixed: RunTime: moved monitor config/evaluation back to Screen